fixed opacity issue with drag on mobile. attempting to fix bug with schedule layout squished

--- a/main.css
+++ b/main.css
@@ -770,6 +770,7 @@ ul a:hover {
 	.schedule-lists {
 		flex-direction: row;
 		width: 100%;
+		height: 180px;
 	}
 	.schedule-lists .list {
 		height: 100px;
